Fixed alignment of project cards.

--- a/public/src/components/PageComponents/ProjectsPage/styles.module.scss
+++ b/public/src/components/PageComponents/ProjectsPage/styles.module.scss
@@ -8,12 +8,13 @@
     background-color: App.$dark-gray;
     padding: 30px 60px;
     min-height: calc(100vh - 65px);
+    min-width: 325px;
 }
 
 .header {
     display: flex;
     flex-direction: column;
-    margin: 0 0 30px 20px;
+    margin: 0 0 30px 0;
 }
 
 .title {
