--- a/public/src/components/ProjectCard/styles.module.scss
+++ b/public/src/components/ProjectCard/styles.module.scss
@@ -11,7 +11,7 @@
     height: 250px;
     border-radius: 10px;
     border: solid 1px #3a3a3a;
-    margin: 20px;
+    margin: 0 40px 40px 0;
     cursor: pointer;
     z-index: 1;
 
